add exception handler for domain exceptions

--- a/recommendation_ms/src/main/resources/application.properties
+++ b/recommendation_ms/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+org.apache.coyote.http11.Http11Processor.level = FINE
