--- a/recommendation_ms/docker-compose.yml
+++ b/recommendation_ms/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3'
 
 services:
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"       # Puerto para las conexiones de RabbitMQ
+      - "15672:15672"     # Puerto para la consola de administración
+    environment:
+      RABBITMQ_DEFAULT_USER: guest      # Usuario por defecto
+      RABBITMQ_DEFAULT_PASS: guest  # Contraseña por defecto
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq  # Persistencia de datos
+
   mongodb:
     image: mongo:5.0
     ports:
@@ -10,3 +22,5 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=mongo
       - MONGO_INITDB_ROOT_PASSWORD=mongo
+volumes:
+  rabbitmq_data:
