--- a/gestion_evento_microservicio/pom.xml
+++ b/gestion_evento_microservicio/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.activate</groupId>
+	<groupId>com.activate.ActivateMSV1</groupId>
 	<artifactId>gestion_evento_microservicio</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gestion_evento_microservicio</name>
-	<description>Microservicio para la gestión de eventos</description>
+	<description>Microservicio para la gestión de events</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -48,6 +48,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 	</dependencies>
 
