--- a/gestion_evento_microservicio/src/main/resources/application.properties
+++ b/gestion_evento_microservicio/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.application.name=gestion_evento_microservicio
-
 spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:10002/admin
 spring.data.mongodb.database=Activate
 
@@ -17,3 +15,22 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+#Imagen Docker
+#spring.data.mongodb.uri=mongodb://mongo:mongo@mongodb:10002/Activate
+#spring.data.mongodb.database=Activate
+
+#spring.datasource.url=jdbc:postgresql://postgres:10001/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.flyway.enabled=false
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
+
+#spring.rabbitmq.host=host.docker.internal
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
