add docker deploy

--- a/recommendation_ms/src/main/resources/application.properties
+++ b/recommendation_ms/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=recommendation_ms
 server.port=8081
 
-spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:10002/admin
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=ActivateRecommendationDB
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.username=${RABBITMQ_DEFAULT_USER}
+spring.rabbitmq.password=${RABBITMQ_DEFAULT_PASS}
 
-org.apache.coyote.http11.Http11Processor.level = FINE
+org.apache.coyote.http11.Http11Processor.level=FINE
+
