--- a/recommendation_ms/docker-compose.yml
+++ b/recommendation_ms/docker-compose.yml
@@ -1,26 +1,34 @@
-version: '3'
+version: '3.8'
 
 services:
-  rabbitmq:
-    image: rabbitmq:management
-    container_name: rabbitmq
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "5672:5672"       # Puerto para las conexiones de RabbitMQ
-      - "15672:15672"     # Puerto para la consola de administración
+      - "8081:8081"  # Puerto de la aplicación
+    depends_on:
+      mongodb:
+        condition: service_healthy
     environment:
-      RABBITMQ_DEFAULT_USER: guest      # Usuario por defecto
-      RABBITMQ_DEFAULT_PASS: guest  # Contraseña por defecto
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq  # Persistencia de datos
+      - SPRING_DATA_MONGODB_URI=${SPRING_DATA_MONGODB_URI}
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
+      - RABBITMQ_HOST=${RABBITMQ_HOST}
+      - RABBITMQ_PORT=${RABBITMQ_PORT}
 
   mongodb:
     image: mongo:5.0
+    container_name: mongodb
     ports:
-      - '10002:27017'
+      - '27017'
     volumes:
       - ~/docker-volumes/personal/cqrs-mongo:/data/db
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=mongo
-      - MONGO_INITDB_ROOT_PASSWORD=mongo
-volumes:
-  rabbitmq_data:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+    healthcheck:
+      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
