add docker-compose and start.sh

--- a/gestion_evento_microservicio/Dockerfile
+++ b/gestion_evento_microservicio/Dockerfile
@@ -1,14 +1,13 @@
-# Use an official OpenJDK runtime as a parent image
 FROM openjdk:21-jdk-slim
 
 # Set the working directory in the container
 WORKDIR /app
 
 # Copy the JAR file from the host to the container
-COPY out/artifacts/gestion_evento_microservicio_jar/gestion_evento_microservicio.jar /app/userMs.jar
+COPY target/gestion_evento_microservicio-0.0.1-SNAPSHOT.jar /app/event-server.jar
 
 # Expose the port that the application will run on
 EXPOSE 8080
 
 # Run the JAR file
-ENTRYPOINT ["java", "-jar", "/app/userMs.jar"]
+ENTRYPOINT ["java", "-jar", "/app/event-server.jar"]
