--- a/user_management_ms/src/main/resources/application.properties
+++ b/user_management_ms/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.application.name=user_management_ms
-spring.datasource.url=jdbc:postgresql://localhost:10001/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
 server.port=8082
+spring.application.name=user_management_ms
 
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=${DATASOURCE_DRIVER_CLASS_NAME}
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
